y.output
   0  $accept : Program $end

   1  Program : PROGRAMnum IDnum SEMInum ClassDecl_rec

   2  ClassDecl_rec : ClassDecl
   3                | ClassDecl_rec ClassDecl

   4  ClassDecl : CLASSnum IDnum ClassBody

   5  ClassBody : LBRACEnum MethodDecl_z1 RBRACEnum
   6            | LBRACEnum Decls MethodDecl_z1 RBRACEnum

   7  MethodDecl_z1 :
   8                | MethodDecl_rec

   9  MethodDecl_rec : MethodDecl
  10                 | MethodDecl_rec MethodDecl

  11  Decls : DECLARATIONSnum ENDDECLARATIONSnum
  12        | DECLARATIONSnum FieldDecl_rec ENDDECLARATIONSnum

  13  FieldDecl_rec : FieldDecl
  14                | FieldDecl_rec FieldDecl

  15  $$1 :

  16  FieldDecl : Type $$1 FieldDecl_body SEMInum

  17  Tail : VariableDeclId
  18       | VariableDeclId EQUALnum VariableInitializer

  19  FieldDecl_body : Tail
  20                 | FieldDecl_body COMMAnum Tail

  21  VariableDeclId : IDnum
  22                 | IDnum Bracket_rec1

  23  Bracket_rec1 : LBRACnum RBRACnum
  24               | Bracket_rec1 LBRACnum RBRACnum

  25  VariableInitializer : Expression
  26                      | ArrayInitializer
  27                      | ArrayCreationExpression

  28  ArrayInitializer : LBRACEnum ArrayInitializer_body RBRACEnum

  29  ArrayInitializer_body : VariableInitializer
  30                        | ArrayInitializer_body COMMAnum VariableInitializer

  31  ArrayCreationExpression : INTnum ArrayCreationExpression_tail

  32  ArrayCreationExpression_tail : LBRACnum Expression RBRACnum
  33                               | ArrayCreationExpression_tail LBRACnum Expression RBRACnum

  34  $$2 :

  35  MethodDecl : METHODnum Type $$2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

  36  $$3 :

  37  MethodDecl : METHODnum VOIDnum $$3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block

  38  FormalParameterList_z1 :
  39                         | FormalParameterList

  40  FormalParameterList : FormalParameterList_rec
  41                      | FormalParameterList SEMInum FormalParameterList_rec

  42  $$4 :

  43  FormalParameterList_rec : INTnum $$4 IDENTIFIER_rec

  44  $$5 :

  45  FormalParameterList_rec : VALnum INTnum $$5 IDENTIFIER_rec

  46  IDENTIFIER_rec : IDnum
  47                 | IDENTIFIER_rec COMMAnum IDnum

  48  Block : StatementList
  49        | Decls StatementList

  50  Type : Type_front
  51       | Type_front Bracket_rec2
  52       | Type_front Bracket_rec2 DOTnum Type

  53  Type_front : IDnum
  54             | INTnum

  55  Bracket_rec2 : LBRACnum RBRACnum
  56               | LBRACnum RBRACnum Bracket_rec2

  57  StatementList : LBRACEnum Statement_rec RBRACEnum

  58  Statement_rec : Statement
  59                | Statement_rec SEMInum Statement

  60  Statement :
  61            | AssignmentStatement
  62            | MethodCallStatement
  63            | ReturnStatement
  64            | IfStatement
  65            | WhileStatement

  66  AssignmentStatement : Variable ASSGNnum Expression

  67  MethodCallStatement : Variable MethodCallStatement_tail

  68  MethodCallStatement_tail : LPARENnum Expression_rec RPARENnum
  69                           | LPARENnum RPARENnum

  70  Expression_rec : Expression
  71                 | Expression COMMAnum Expression_rec

  72  ReturnStatement : RETURNnum
  73                  | RETURNnum Expression

  74  IfStatement : IFnum Expression StatementList
  75              | If_rec StatementList
  76              | If_rec IFnum Expression StatementList

  77  If_rec : IFnum Expression StatementList ELSEnum
  78         | If_rec IFnum Expression StatementList ELSEnum

  79  WhileStatement : WHILEnum Expression StatementList

  80  Expression : SimpleExpression
  81             | SimpleExpression Comp_op SimpleExpression

  82  Comp_op : LTnum
  83          | LEnum
  84          | EQnum
  85          | NEnum
  86          | GEnum
  87          | GTnum

  88  SimpleExpression : Term
  89                   | PLUSnum Term
  90                   | MINUSnum Term
  91                   | SimpleExpression PLUSnum Term
  92                   | SimpleExpression MINUSnum Term
  93                   | SimpleExpression ORnum Term

  94  Term : Factor
  95       | Term TIMESnum Factor
  96       | Term DIVIDEnum Factor
  97       | Term ANDnum Factor

  98  Factor : UnsignedConstant
  99         | Variable
 100         | MethodCallStatement
 101         | LPARENnum Expression RPARENnum
 102         | NOTnum Factor

 103  UnsignedConstant : ICONSTnum
 104                   | SCONSTnum

 105  Variable : IDnum Variable_tail

 106  Variable_tail :
 107                | Variable_rec

 108  Variable_rec : Variable_1
 109               | Variable_1 Variable_rec

 110  Variable_1 : LBRACnum Expression_rec2 RBRACnum
 111             | DOTnum IDnum

 112  Expression_rec2 : Expression
 113                  | Expression COMMAnum Expression_rec2

state 0
	$accept : . Program $end  (0)

	PROGRAMnum  shift 1
	.  error

	Program  goto 2


state 1
	Program : PROGRAMnum . IDnum SEMInum ClassDecl_rec  (1)

	IDnum  shift 3
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : PROGRAMnum IDnum . SEMInum ClassDecl_rec  (1)

	SEMInum  shift 4
	.  error


state 4
	Program : PROGRAMnum IDnum SEMInum . ClassDecl_rec  (1)

	CLASSnum  shift 5
	.  error

	ClassDecl_rec  goto 6
	ClassDecl  goto 7


state 5
	ClassDecl : CLASSnum . IDnum ClassBody  (4)

	IDnum  shift 8
	.  error


state 6
	Program : PROGRAMnum IDnum SEMInum ClassDecl_rec .  (1)
	ClassDecl_rec : ClassDecl_rec . ClassDecl  (3)

	CLASSnum  shift 5
	$end  reduce 1

	ClassDecl  goto 9


state 7
	ClassDecl_rec : ClassDecl .  (2)

	.  reduce 2


state 8
	ClassDecl : CLASSnum IDnum . ClassBody  (4)

	LBRACEnum  shift 10
	.  error

	ClassBody  goto 11


state 9
	ClassDecl_rec : ClassDecl_rec ClassDecl .  (3)

	.  reduce 3


state 10
	ClassBody : LBRACEnum . MethodDecl_z1 RBRACEnum  (5)
	ClassBody : LBRACEnum . Decls MethodDecl_z1 RBRACEnum  (6)
	MethodDecl_z1 : .  (7)

	DECLARATIONSnum  shift 12
	METHODnum  shift 13
	RBRACEnum  reduce 7

	MethodDecl_z1  goto 14
	MethodDecl_rec  goto 15
	Decls  goto 16
	MethodDecl  goto 17


state 11
	ClassDecl : CLASSnum IDnum ClassBody .  (4)

	.  reduce 4


state 12
	Decls : DECLARATIONSnum . ENDDECLARATIONSnum  (11)
	Decls : DECLARATIONSnum . FieldDecl_rec ENDDECLARATIONSnum  (12)

	IDnum  shift 18
	ENDDECLARATIONSnum  shift 19
	INTnum  shift 20
	.  error

	FieldDecl_rec  goto 21
	FieldDecl  goto 22
	Type  goto 23
	Type_front  goto 24


state 13
	MethodDecl : METHODnum . Type $$2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (35)
	MethodDecl : METHODnum . VOIDnum $$3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (37)

	IDnum  shift 18
	VOIDnum  shift 25
	INTnum  shift 20
	.  error

	Type  goto 26
	Type_front  goto 24


state 14
	ClassBody : LBRACEnum MethodDecl_z1 . RBRACEnum  (5)

	RBRACEnum  shift 27
	.  error


state 15
	MethodDecl_z1 : MethodDecl_rec .  (8)
	MethodDecl_rec : MethodDecl_rec . MethodDecl  (10)

	METHODnum  shift 13
	RBRACEnum  reduce 8

	MethodDecl  goto 28


state 16
	ClassBody : LBRACEnum Decls . MethodDecl_z1 RBRACEnum  (6)
	MethodDecl_z1 : .  (7)

	METHODnum  shift 13
	RBRACEnum  reduce 7

	MethodDecl_z1  goto 29
	MethodDecl_rec  goto 15
	MethodDecl  goto 17


state 17
	MethodDecl_rec : MethodDecl .  (9)

	.  reduce 9


state 18
	Type_front : IDnum .  (53)

	.  reduce 53


state 19
	Decls : DECLARATIONSnum ENDDECLARATIONSnum .  (11)

	.  reduce 11


state 20
	Type_front : INTnum .  (54)

	.  reduce 54


state 21
	Decls : DECLARATIONSnum FieldDecl_rec . ENDDECLARATIONSnum  (12)
	FieldDecl_rec : FieldDecl_rec . FieldDecl  (14)

	IDnum  shift 18
	ENDDECLARATIONSnum  shift 30
	INTnum  shift 20
	.  error

	FieldDecl  goto 31
	Type  goto 23
	Type_front  goto 24


state 22
	FieldDecl_rec : FieldDecl .  (13)

	.  reduce 13


state 23
	FieldDecl : Type . $$1 FieldDecl_body SEMInum  (16)
	$$1 : .  (15)

	.  reduce 15

	$$1  goto 32


state 24
	Type : Type_front .  (50)
	Type : Type_front . Bracket_rec2  (51)
	Type : Type_front . Bracket_rec2 DOTnum Type  (52)

	LBRACnum  shift 33
	IDnum  reduce 50

	Bracket_rec2  goto 34


state 25
	MethodDecl : METHODnum VOIDnum . $$3 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (37)
	$$3 : .  (36)

	.  reduce 36

	$$3  goto 35


state 26
	MethodDecl : METHODnum Type . $$2 IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (35)
	$$2 : .  (34)

	.  reduce 34

	$$2  goto 36


state 27
	ClassBody : LBRACEnum MethodDecl_z1 RBRACEnum .  (5)

	.  reduce 5


state 28
	MethodDecl_rec : MethodDecl_rec MethodDecl .  (10)

	.  reduce 10


state 29
	ClassBody : LBRACEnum Decls MethodDecl_z1 . RBRACEnum  (6)

	RBRACEnum  shift 37
	.  error


state 30
	Decls : DECLARATIONSnum FieldDecl_rec ENDDECLARATIONSnum .  (12)

	.  reduce 12


state 31
	FieldDecl_rec : FieldDecl_rec FieldDecl .  (14)

	.  reduce 14


state 32
	FieldDecl : Type $$1 . FieldDecl_body SEMInum  (16)

	IDnum  shift 38
	.  error

	Tail  goto 39
	FieldDecl_body  goto 40
	VariableDeclId  goto 41


state 33
	Bracket_rec2 : LBRACnum . RBRACnum  (55)
	Bracket_rec2 : LBRACnum . RBRACnum Bracket_rec2  (56)

	RBRACnum  shift 42
	.  error


state 34
	Type : Type_front Bracket_rec2 .  (51)
	Type : Type_front Bracket_rec2 . DOTnum Type  (52)

	DOTnum  shift 43
	IDnum  reduce 51


state 35
	MethodDecl : METHODnum VOIDnum $$3 . IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (37)

	IDnum  shift 44
	.  error


state 36
	MethodDecl : METHODnum Type $$2 . IDnum LPARENnum FormalParameterList_z1 RPARENnum Block  (35)

	IDnum  shift 45
	.  error


state 37
	ClassBody : LBRACEnum Decls MethodDecl_z1 RBRACEnum .  (6)

	.  reduce 6


state 38
	VariableDeclId : IDnum .  (21)
	VariableDeclId : IDnum . Bracket_rec1  (22)

	LBRACnum  shift 46
	SEMInum  reduce 21
	COMMAnum  reduce 21
	EQUALnum  reduce 21

	Bracket_rec1  goto 47


state 39
	FieldDecl_body : Tail .  (19)

	.  reduce 19


state 40
	FieldDecl : Type $$1 FieldDecl_body . SEMInum  (16)
	FieldDecl_body : FieldDecl_body . COMMAnum Tail  (20)

	SEMInum  shift 48
	COMMAnum  shift 49
	.  error


state 41
	Tail : VariableDeclId .  (17)
	Tail : VariableDeclId . EQUALnum VariableInitializer  (18)

	EQUALnum  shift 50
	SEMInum  reduce 17
	COMMAnum  reduce 17


state 42
	Bracket_rec2 : LBRACnum RBRACnum .  (55)
	Bracket_rec2 : LBRACnum RBRACnum . Bracket_rec2  (56)

	LBRACnum  shift 33
	IDnum  reduce 55
	DOTnum  reduce 55

	Bracket_rec2  goto 51


state 43
	Type : Type_front Bracket_rec2 DOTnum . Type  (52)

	IDnum  shift 18
	INTnum  shift 20
	.  error

	Type  goto 52
	Type_front  goto 24


state 44
	MethodDecl : METHODnum VOIDnum $$3 IDnum . LPARENnum FormalParameterList_z1 RPARENnum Block  (37)

	LPARENnum  shift 53
	.  error


state 45
	MethodDecl : METHODnum Type $$2 IDnum . LPARENnum FormalParameterList_z1 RPARENnum Block  (35)

	LPARENnum  shift 54
	.  error


state 46
	Bracket_rec1 : LBRACnum . RBRACnum  (23)

	RBRACnum  shift 55
	.  error


state 47
	VariableDeclId : IDnum Bracket_rec1 .  (22)
	Bracket_rec1 : Bracket_rec1 . LBRACnum RBRACnum  (24)

	LBRACnum  shift 56
	SEMInum  reduce 22
	COMMAnum  reduce 22
	EQUALnum  reduce 22


state 48
	FieldDecl : Type $$1 FieldDecl_body SEMInum .  (16)

	.  reduce 16


state 49
	FieldDecl_body : FieldDecl_body COMMAnum . Tail  (20)

	IDnum  shift 38
	.  error

	Tail  goto 57
	VariableDeclId  goto 41


state 50
	Tail : VariableDeclId EQUALnum . VariableInitializer  (18)

	IDnum  shift 58
	LBRACEnum  shift 59
	LPARENnum  shift 60
	INTnum  shift 61
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	VariableInitializer  goto 67
	ArrayInitializer  goto 68
	ArrayCreationExpression  goto 69
	MethodCallStatement  goto 70
	Expression  goto 71
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 51
	Bracket_rec2 : LBRACnum RBRACnum Bracket_rec2 .  (56)

	.  reduce 56


state 52
	Type : Type_front Bracket_rec2 DOTnum Type .  (52)

	.  reduce 52


state 53
	MethodDecl : METHODnum VOIDnum $$3 IDnum LPARENnum . FormalParameterList_z1 RPARENnum Block  (37)
	FormalParameterList_z1 : .  (38)

	INTnum  shift 77
	VALnum  shift 78
	RPARENnum  reduce 38

	FormalParameterList_z1  goto 79
	FormalParameterList  goto 80
	FormalParameterList_rec  goto 81


state 54
	MethodDecl : METHODnum Type $$2 IDnum LPARENnum . FormalParameterList_z1 RPARENnum Block  (35)
	FormalParameterList_z1 : .  (38)

	INTnum  shift 77
	VALnum  shift 78
	RPARENnum  reduce 38

	FormalParameterList_z1  goto 82
	FormalParameterList  goto 80
	FormalParameterList_rec  goto 81


state 55
	Bracket_rec1 : LBRACnum RBRACnum .  (23)

	.  reduce 23


state 56
	Bracket_rec1 : Bracket_rec1 LBRACnum . RBRACnum  (24)

	RBRACnum  shift 83
	.  error


state 57
	FieldDecl_body : FieldDecl_body COMMAnum Tail .  (20)

	.  reduce 20


state 58
	Variable : IDnum . Variable_tail  (105)
	Variable_tail : .  (106)

	LBRACnum  shift 84
	DOTnum  shift 85
	SEMInum  reduce 106
	COMMAnum  reduce 106
	LBRACEnum  reduce 106
	RBRACEnum  reduce 106
	RBRACnum  reduce 106
	LPARENnum  reduce 106
	RPARENnum  reduce 106
	ASSGNnum  reduce 106
	LTnum  reduce 106
	LEnum  reduce 106
	EQnum  reduce 106
	NEnum  reduce 106
	GEnum  reduce 106
	GTnum  reduce 106
	PLUSnum  reduce 106
	MINUSnum  reduce 106
	ORnum  reduce 106
	TIMESnum  reduce 106
	DIVIDEnum  reduce 106
	ANDnum  reduce 106

	Variable_tail  goto 86
	Variable_rec  goto 87
	Variable_1  goto 88


state 59
	ArrayInitializer : LBRACEnum . ArrayInitializer_body RBRACEnum  (28)

	IDnum  shift 58
	LBRACEnum  shift 59
	LPARENnum  shift 60
	INTnum  shift 61
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	VariableInitializer  goto 89
	ArrayInitializer  goto 68
	ArrayInitializer_body  goto 90
	ArrayCreationExpression  goto 69
	MethodCallStatement  goto 70
	Expression  goto 71
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 60
	Factor : LPARENnum . Expression RPARENnum  (101)

	IDnum  shift 58
	LPARENnum  shift 60
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Expression  goto 91
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 61
	ArrayCreationExpression : INTnum . ArrayCreationExpression_tail  (31)

	LBRACnum  shift 92
	.  error

	ArrayCreationExpression_tail  goto 93


state 62
	SimpleExpression : PLUSnum . Term  (89)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Term  goto 94
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 63
	SimpleExpression : MINUSnum . Term  (90)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Term  goto 95
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 64
	Factor : NOTnum . Factor  (102)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Factor  goto 96
	UnsignedConstant  goto 75
	Variable  goto 76


state 65
	UnsignedConstant : ICONSTnum .  (103)

	.  reduce 103


state 66
	UnsignedConstant : SCONSTnum .  (104)

	.  reduce 104


state 67
	Tail : VariableDeclId EQUALnum VariableInitializer .  (18)

	.  reduce 18


state 68
	VariableInitializer : ArrayInitializer .  (26)

	.  reduce 26


state 69
	VariableInitializer : ArrayCreationExpression .  (27)

	.  reduce 27


state 70
	Factor : MethodCallStatement .  (100)

	.  reduce 100


state 71
	VariableInitializer : Expression .  (25)

	.  reduce 25


state 72
	Expression : SimpleExpression .  (80)
	Expression : SimpleExpression . Comp_op SimpleExpression  (81)
	SimpleExpression : SimpleExpression . PLUSnum Term  (91)
	SimpleExpression : SimpleExpression . MINUSnum Term  (92)
	SimpleExpression : SimpleExpression . ORnum Term  (93)

	LTnum  shift 97
	LEnum  shift 98
	EQnum  shift 99
	NEnum  shift 100
	GEnum  shift 101
	GTnum  shift 102
	PLUSnum  shift 103
	MINUSnum  shift 104
	ORnum  shift 105
	SEMInum  reduce 80
	COMMAnum  reduce 80
	LBRACEnum  reduce 80
	RBRACEnum  reduce 80
	RBRACnum  reduce 80
	RPARENnum  reduce 80

	Comp_op  goto 106


state 73
	SimpleExpression : Term .  (88)
	Term : Term . TIMESnum Factor  (95)
	Term : Term . DIVIDEnum Factor  (96)
	Term : Term . ANDnum Factor  (97)

	TIMESnum  shift 107
	DIVIDEnum  shift 108
	ANDnum  shift 109
	SEMInum  reduce 88
	COMMAnum  reduce 88
	LBRACEnum  reduce 88
	RBRACEnum  reduce 88
	RBRACnum  reduce 88
	RPARENnum  reduce 88
	LTnum  reduce 88
	LEnum  reduce 88
	EQnum  reduce 88
	NEnum  reduce 88
	GEnum  reduce 88
	GTnum  reduce 88
	PLUSnum  reduce 88
	MINUSnum  reduce 88
	ORnum  reduce 88


state 74
	Term : Factor .  (94)

	.  reduce 94


state 75
	Factor : UnsignedConstant .  (98)

	.  reduce 98


state 76
	MethodCallStatement : Variable . MethodCallStatement_tail  (67)
	Factor : Variable .  (99)

	LPARENnum  shift 110
	SEMInum  reduce 99
	COMMAnum  reduce 99
	LBRACEnum  reduce 99
	RBRACEnum  reduce 99
	RBRACnum  reduce 99
	RPARENnum  reduce 99
	LTnum  reduce 99
	LEnum  reduce 99
	EQnum  reduce 99
	NEnum  reduce 99
	GEnum  reduce 99
	GTnum  reduce 99
	PLUSnum  reduce 99
	MINUSnum  reduce 99
	ORnum  reduce 99
	TIMESnum  reduce 99
	DIVIDEnum  reduce 99
	ANDnum  reduce 99

	MethodCallStatement_tail  goto 111


state 77
	FormalParameterList_rec : INTnum . $$4 IDENTIFIER_rec  (43)
	$$4 : .  (42)

	.  reduce 42

	$$4  goto 112


state 78
	FormalParameterList_rec : VALnum . INTnum $$5 IDENTIFIER_rec  (45)

	INTnum  shift 113
	.  error


state 79
	MethodDecl : METHODnum VOIDnum $$3 IDnum LPARENnum FormalParameterList_z1 . RPARENnum Block  (37)

	RPARENnum  shift 114
	.  error


state 80
	FormalParameterList_z1 : FormalParameterList .  (39)
	FormalParameterList : FormalParameterList . SEMInum FormalParameterList_rec  (41)

	SEMInum  shift 115
	RPARENnum  reduce 39


state 81
	FormalParameterList : FormalParameterList_rec .  (40)

	.  reduce 40


state 82
	MethodDecl : METHODnum Type $$2 IDnum LPARENnum FormalParameterList_z1 . RPARENnum Block  (35)

	RPARENnum  shift 116
	.  error


state 83
	Bracket_rec1 : Bracket_rec1 LBRACnum RBRACnum .  (24)

	.  reduce 24


state 84
	Variable_1 : LBRACnum . Expression_rec2 RBRACnum  (110)

	IDnum  shift 58
	LPARENnum  shift 60
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Expression  goto 117
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	Expression_rec2  goto 118
	UnsignedConstant  goto 75
	Variable  goto 76


state 85
	Variable_1 : DOTnum . IDnum  (111)

	IDnum  shift 119
	.  error


state 86
	Variable : IDnum Variable_tail .  (105)

	.  reduce 105


state 87
	Variable_tail : Variable_rec .  (107)

	.  reduce 107


state 88
	Variable_rec : Variable_1 .  (108)
	Variable_rec : Variable_1 . Variable_rec  (109)

	LBRACnum  shift 84
	DOTnum  shift 85
	SEMInum  reduce 108
	COMMAnum  reduce 108
	LBRACEnum  reduce 108
	RBRACEnum  reduce 108
	RBRACnum  reduce 108
	LPARENnum  reduce 108
	RPARENnum  reduce 108
	ASSGNnum  reduce 108
	LTnum  reduce 108
	LEnum  reduce 108
	EQnum  reduce 108
	NEnum  reduce 108
	GEnum  reduce 108
	GTnum  reduce 108
	PLUSnum  reduce 108
	MINUSnum  reduce 108
	ORnum  reduce 108
	TIMESnum  reduce 108
	DIVIDEnum  reduce 108
	ANDnum  reduce 108

	Variable_rec  goto 120
	Variable_1  goto 88


state 89
	ArrayInitializer_body : VariableInitializer .  (29)

	.  reduce 29


state 90
	ArrayInitializer : LBRACEnum ArrayInitializer_body . RBRACEnum  (28)
	ArrayInitializer_body : ArrayInitializer_body . COMMAnum VariableInitializer  (30)

	COMMAnum  shift 121
	RBRACEnum  shift 122
	.  error


state 91
	Factor : LPARENnum Expression . RPARENnum  (101)

	RPARENnum  shift 123
	.  error


state 92
	ArrayCreationExpression_tail : LBRACnum . Expression RBRACnum  (32)

	IDnum  shift 58
	LPARENnum  shift 60
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Expression  goto 124
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 93
	ArrayCreationExpression : INTnum ArrayCreationExpression_tail .  (31)
	ArrayCreationExpression_tail : ArrayCreationExpression_tail . LBRACnum Expression RBRACnum  (33)

	LBRACnum  shift 125
	SEMInum  reduce 31
	COMMAnum  reduce 31
	RBRACEnum  reduce 31


state 94
	SimpleExpression : PLUSnum Term .  (89)
	Term : Term . TIMESnum Factor  (95)
	Term : Term . DIVIDEnum Factor  (96)
	Term : Term . ANDnum Factor  (97)

	TIMESnum  shift 107
	DIVIDEnum  shift 108
	ANDnum  shift 109
	SEMInum  reduce 89
	COMMAnum  reduce 89
	LBRACEnum  reduce 89
	RBRACEnum  reduce 89
	RBRACnum  reduce 89
	RPARENnum  reduce 89
	LTnum  reduce 89
	LEnum  reduce 89
	EQnum  reduce 89
	NEnum  reduce 89
	GEnum  reduce 89
	GTnum  reduce 89
	PLUSnum  reduce 89
	MINUSnum  reduce 89
	ORnum  reduce 89


state 95
	SimpleExpression : MINUSnum Term .  (90)
	Term : Term . TIMESnum Factor  (95)
	Term : Term . DIVIDEnum Factor  (96)
	Term : Term . ANDnum Factor  (97)

	TIMESnum  shift 107
	DIVIDEnum  shift 108
	ANDnum  shift 109
	SEMInum  reduce 90
	COMMAnum  reduce 90
	LBRACEnum  reduce 90
	RBRACEnum  reduce 90
	RBRACnum  reduce 90
	RPARENnum  reduce 90
	LTnum  reduce 90
	LEnum  reduce 90
	EQnum  reduce 90
	NEnum  reduce 90
	GEnum  reduce 90
	GTnum  reduce 90
	PLUSnum  reduce 90
	MINUSnum  reduce 90
	ORnum  reduce 90


state 96
	Factor : NOTnum Factor .  (102)

	.  reduce 102


state 97
	Comp_op : LTnum .  (82)

	.  reduce 82


state 98
	Comp_op : LEnum .  (83)

	.  reduce 83


state 99
	Comp_op : EQnum .  (84)

	.  reduce 84


state 100
	Comp_op : NEnum .  (85)

	.  reduce 85


state 101
	Comp_op : GEnum .  (86)

	.  reduce 86


state 102
	Comp_op : GTnum .  (87)

	.  reduce 87


state 103
	SimpleExpression : SimpleExpression PLUSnum . Term  (91)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Term  goto 126
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 104
	SimpleExpression : SimpleExpression MINUSnum . Term  (92)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Term  goto 127
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 105
	SimpleExpression : SimpleExpression ORnum . Term  (93)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Term  goto 128
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 106
	Expression : SimpleExpression Comp_op . SimpleExpression  (81)

	IDnum  shift 58
	LPARENnum  shift 60
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	SimpleExpression  goto 129
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 107
	Term : Term TIMESnum . Factor  (95)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Factor  goto 130
	UnsignedConstant  goto 75
	Variable  goto 76


state 108
	Term : Term DIVIDEnum . Factor  (96)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Factor  goto 131
	UnsignedConstant  goto 75
	Variable  goto 76


state 109
	Term : Term ANDnum . Factor  (97)

	IDnum  shift 58
	LPARENnum  shift 60
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Factor  goto 132
	UnsignedConstant  goto 75
	Variable  goto 76


state 110
	MethodCallStatement_tail : LPARENnum . Expression_rec RPARENnum  (68)
	MethodCallStatement_tail : LPARENnum . RPARENnum  (69)

	IDnum  shift 58
	LPARENnum  shift 60
	RPARENnum  shift 133
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	MethodCallStatement  goto 70
	Expression_rec  goto 134
	Expression  goto 135
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 111
	MethodCallStatement : Variable MethodCallStatement_tail .  (67)

	.  reduce 67


state 112
	FormalParameterList_rec : INTnum $$4 . IDENTIFIER_rec  (43)

	IDnum  shift 136
	.  error

	IDENTIFIER_rec  goto 137


state 113
	FormalParameterList_rec : VALnum INTnum . $$5 IDENTIFIER_rec  (45)
	$$5 : .  (44)

	.  reduce 44

	$$5  goto 138


state 114
	MethodDecl : METHODnum VOIDnum $$3 IDnum LPARENnum FormalParameterList_z1 RPARENnum . Block  (37)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 139
	.  error

	Decls  goto 140
	Block  goto 141
	StatementList  goto 142


state 115
	FormalParameterList : FormalParameterList SEMInum . FormalParameterList_rec  (41)

	INTnum  shift 77
	VALnum  shift 78
	.  error

	FormalParameterList_rec  goto 143


state 116
	MethodDecl : METHODnum Type $$2 IDnum LPARENnum FormalParameterList_z1 RPARENnum . Block  (35)

	DECLARATIONSnum  shift 12
	LBRACEnum  shift 139
	.  error

	Decls  goto 140
	Block  goto 144
	StatementList  goto 142


state 117
	Expression_rec2 : Expression .  (112)
	Expression_rec2 : Expression . COMMAnum Expression_rec2  (113)

	COMMAnum  shift 145
	RBRACnum  reduce 112


state 118
	Variable_1 : LBRACnum Expression_rec2 . RBRACnum  (110)

	RBRACnum  shift 146
	.  error


state 119
	Variable_1 : DOTnum IDnum .  (111)

	.  reduce 111


state 120
	Variable_rec : Variable_1 Variable_rec .  (109)

	.  reduce 109


state 121
	ArrayInitializer_body : ArrayInitializer_body COMMAnum . VariableInitializer  (30)

	IDnum  shift 58
	LBRACEnum  shift 59
	LPARENnum  shift 60
	INTnum  shift 61
	PLUSnum  shift 62
	MINUSnum  shift 63
	NOTnum  shift 64
	ICONSTnum  shift 65
	SCONSTnum  shift 66
	.  error

	VariableInitializer  goto 147
	ArrayInitializer  goto 68
	ArrayCreationExpression  goto 69
	MethodCallStatement  goto 70
	Expression  goto 71
	SimpleExpression  goto 72
	Term  goto 73
	Factor  goto 74
	UnsignedConstant  goto 75
	Variable  goto 76


state 122
	ArrayInitializer : LBRACEnum ArrayInitializer_body RBRACEnum .  (28)
